tests/specs/run/sourcemap_remote/external.js.out
Download http://localhost:4545/run/sourcemap_external.js.map
error: Uncaught (in promise) Error: Test error with external sourcemap
  throw new Error("Test error with external sourcemap");
  ^
    at throwError ([WILDCARD]original.ts:3:3)
    at [WILDCARD]original.ts:6:14
