tests/specs/run/sourcemap_remote/external.js
// Generated JavaScript file
function throwError() {
  throw new Error("Test error with external sourcemap");
}

throwError();

//# sourceMappingURL=http://localhost:4545/run/sourcemap_external.js.map
